refactor: 회원가입 효율화, 인증코드확인 반환타입 수정
- 회원가입 로직
   - 반복문으로 Term 조회 로직 -> id리스트로 List<Term> 조회
   - Agreements 저장 시, saveAll을 이용한 bulk insert
- 인증코등 확인 로직
   - 반환타입 (String -> Enum)

- #4